Fix execution of aaa-jdbc-tool on OpenJDK 11
Change-Id: I4f1919b39d01a7275554a8ae0116d8c3df6e59b7
Bug-Url: https://bugzilla.redhat.com/1734720
Signed-off-by: Martin Perina <mperina@redhat.com>